Kitchen app seperated and updated with kitchen management screens

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- Use TextureView instead of SurfaceView to avoid BLASTBufferQueue issues -->
+        <meta-data
+            android:name="io.flutter.embedding.android.RenderMode"
+            android:value="texture" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
